--- a/views/_layout.jade
+++ b/views/_layout.jade
@@ -4,6 +4,14 @@ html
     title= title
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width,initial-scale=1.0')
+    link(rel='icon' href='https://i.imgur.com/VINS52e.png')
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
+    link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:400,300')
+    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
+    link(rel='stylesheet' href='/css/main.css')
   body
+    include /_partials/header.jade
     block content
+    script(src='https://code.jquery.com/jquery-2.2.2.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
+    script(src='/js/main.js')
