--- a/views/home.jade
+++ b/views/home.jade
@@ -7,12 +7,13 @@ block content
       #landing-copy.text-center
         h1 Doges of Wall Street
         br
-        p Algorithmic Trading for Cryptocurrencies
+        p Easy Algorithmic Trading with Cryptocurrencies
         br
         a.btn.btn-custom.btn-lg(href='#page2') Get Started
         br
         br
-        p Begin testing your algorithms today with historical data
+        br
+        p Leveling the Playing Field for Algorithmic Trading
         br
         br
         br
@@ -27,18 +28,22 @@ block content
         br
       .row
         .col-sm-6
-          pre
-            code.python.
-              import pyalgotrade
-              
-              class TradingStrategy
-                def __intit__(yo)
-                  yo.(hey);
+          //-
+            pre
+              code.python.
+                # Beginner Usage
+                # We have an easy-to-use beginner console for you to make simple algorithms easily!
+
+                # Advanced Usage (coming soon)
+                # Using python algorithmic trading libraries
+                import pyalgotrade
+                
+                class TradingStrategy
+                  def __init__
+                   # more code
         .col-sm-6
-          p Create algorithms using our code and run them, and compete against our community to make the most profits.
-          p In the future, you'll be able to deploy your algorithms on our platform to trade on major cryptocurrency exchanges.
-      br
-      br
+          p Create algorithms with our easy-to-use beginner console, and compete against our community to make the most profits.
+          p In the future, you'll be able to deploy your own coded algorithms on our platform as well as be able to trade on major cryptocurrency exchanges.
       br
       br
       .text-center
@@ -47,34 +52,10 @@ block content
   .jumbotron.full-page#page3
     .container
       .text-center
-        h1 Try it Now
-        p Use our interactive editor to try an algorithm in your browser
+        h1 Why Us?
         br
-      pre
-        textarea.form-control(placeholder='Your Algorithm' rows='10')
-      br
-      .pull-left
-        .form-inline
-          .form-group
-            p Select Trading Pair&nbsp;
-              select.form-control
-                option DOGE/BTC
-                option(disabled) LTC/BTC (coming soon)
-                option(disabled) ETH/BTC (coming soon)
-                option(disabled) XRP/BTC (coming soon)
-              br
-              br
-              | &nbsp;Select Time Interval #[input.form-control(type='date')] to now&nbsp;
-      .pull-right
-        button.btn.btn-primary.btn-lg Run
-      .clearfix
-      br
-      br
-      h2 Sample Algorithm
-      pre
-        code.python.
-          import pyalgotrade
-          
-          class TradingStrategy
-            def __intit__(yo)
-              yo.(hey);
+        p #[b Doges of Wall Street] makes it easy for beginners to get started with algorithmic trading. While algorithmic trading is portrayed as an intricate, complex topic involving sophisticated models and mathematics, the reality is that it's trivially easy to get starteed. We want to bridge the disconnect between the financial elite who want to keep their technology on the down low, and the ordinary citizen, allowing people like you to have the same tools and resources as the big banks. This more equitable distribution of knowledge and capabilities will increase market fluidity and thus stabilize the global economy.
+        br
+        p We chose to take the cryptocurrency route rather than the traditional stock route because of its greater accessibility as well as the unlimited potential of the technology. Unlike stocks, in which one must be over 18 to open a brokerage account, cryptocurrencies can be traded by anyone. In addition, cryptocurrencies can be traded internationally with little restriction, in contrast to stocks which face strict regulation. Finally, the future promise of cryptocurrency and blockchain technology makes it a good thing to innovate with today.
+        br
+        a.btn.btn-custom.btn-lg(href='/algo') Try Now
