--- a/views/_layout.jade
+++ b/views/_layout.jade
@@ -12,6 +12,7 @@ html
     link(rel='stylesheet' href='/css/main.css')
   body(data-spy='scroll' data-target='#navbar-content')
     include /_partials/header.jade
+    include /_partials/flash.jade
     block content
     script(src='https://code.jquery.com/jquery-2.2.2.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
