--- a/views/home.jade
+++ b/views/home.jade
@@ -28,6 +28,7 @@ block content
         br
       .row
         .col-sm-6
+          img.img-responsive(src='https://i.imgur.com/byi1DAi.png?1')
           //-
             pre
               code.python.
