--- a/views/_partials/flash.jade
+++ b/views/_partials/flash.jade
@@ -1,4 +1,5 @@
-.flash-container(style='padding-top: 80px;')
+// Flash container needs to blend in with background
+.flash-container(style='padding-top: 80px; background-color: #eee;')
   if messages.errors
     .alert.alert-danger.fade.in
       button.close(type='button', data-dismiss='alert')
